# openapipages

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamlfmt.yml  .yamllint.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  prek.toml  pyproject.toml  renovate.json
.github/: CODEOWNERS  actionlint.yaml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  tool_proposal.md
.github/workflows/: cd.yml  check-pr-title.yml  check-prek.yml  ci.yml  publish.yml  release-drafter.yml  test.yml
examples/fastapi/: README.md  main.py
examples/litestar/: README.md  __init__.py  app.py  main.py  pyproject.toml
src/openapidoc/: __about__.py  base.py  elements.py  rapidoc.py  redoc.py  scalar.py  swaggerui.py
src/openapipages/: __about__.py  __init__.py  base.py  elements.py  rapidoc.py  redoc.py  scalar.py  swaggerui.py
tests/: main.py  test_elements.py  test_rapidoc.py  test_redoc.py  test_scalar.py  test_swaggerui.py
tests/e2e/: app.py  conftest.py  test_http.py  test_no_js.py  test_render.py
tests/integration/: test_scalar.py
tests/unit/: test_base.py  test_renderers.py
